--- a/products4.html
+++ b/products4.html
@@ -69,7 +69,7 @@
       <!-- Modal -->
       <div id="productModal" ref="productModal" class="modal fade" tabindex="-1" aria-labelledby="productModalLabel"
            aria-hidden="true">
-        <product-modal :tempProduct="tempProduct"></product-modal>
+        <product-modal :temp-product="tempProduct" :update-product="updateProduct"></product-modal>
       </div>
       <div id="delProductModal" ref="delProductModal" class="modal fade" tabindex="-1"
            aria-labelledby="delProductModalLabel" aria-hidden="true">
